--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,7 +24,7 @@ a:hover {
 }
 
 body {
-  margin: 20px;
+  
   padding: 0;
   min-width: 320px;
 }
